# iced_layershell

./: CLAUDE.md  Cargo.toml  README.md
.github/: labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  labeler.yml  release-drafter.yml  release.yml
examples/: bar_with_menu.rs  simple_bar.rs  simple_lock.rs
src/: application.rs  conversion.rs  lib.rs  lock_subscription.rs  output_subscription.rs  settings.rs  state.rs  subscription_channel.rs  surface_manager.rs  task.rs  wayland_clipboard.rs
src/handlers/: mod.rs  pointer.rs  session_lock.rs  touch.rs
